@@ -7,6 +7,7 @@ package jmc.minecraft.utils;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.UUID;
 //import java.util.Map;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -110,8 +111,7 @@ public class MCGameRuner {
 		params.add("-Dfml.ignoreInvalidMinecraftCertificates=true");
 		params.add("-Dfml.ignorePatchDiscrepancies=true");
 		
-		params.add("-cp");
-
+		/*params.add("-cp");
 		params.add(
 				ClientFolderPath + "bin" + File.separator + "launchwrapper-1.8.jar"+Utils.getJavaDelimiter()+
 				ClientFolderPath + "bin" + File.separator + "minecraftforge-9.11.1.965.jar"+Utils.getJavaDelimiter()+
@@ -138,9 +138,40 @@ public class MCGameRuner {
 				ClientFolderPath + "bin" + File.separator + "lwjgl_util-2.9.1.jar"+Utils.getJavaDelimiter()+
 				ClientFolderPath + "bin" + File.separator + "lwjgl-platform-2.9.1.jar"+Utils.getJavaDelimiter()+
 				ClientFolderPath + "bin" + File.separator + "jinput-platform-2.0.5.jar"
-				);
+				);*/
 		
 		if (GlobalVar.fmlVersion.equals("16x")) {
+
+			params.add("-cp");
+			params.add(
+					ClientFolderPath + "bin" + File.separator + "launchwrapper-1.8.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "minecraftforge-9.11.1.965.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "asm-all-4.1.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "scala-library-2.10.2.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "scala-compiler-2.10.2.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "lzma-0.0.1.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "1.6.4-Forge9.11.1.965.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "jopt-simple-4.5.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "codecjorbis-20101023.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "codecwav-20101023.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "libraryjavasound-20101123.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "librarylwjglopenal-20100824.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "soundsystem-20120107.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "argo-2.25_fixed.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "bcprov-jdk15on-1.47.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "guava-14.0.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "commons-lang3-3.1.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "commons-io-2.4.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "jinput-2.0.5.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "jutils-1.0.0.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "gson-2.2.2.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "lwjgl-2.9.1.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "lwjgl_util-2.9.1.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "lwjgl-platform-2.9.1.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "jinput-platform-2.0.5.jar"
+					);
+
+			
 			//--tweakClass cpw.mods.fml.common.launcher.FMLTweaker --username ${auth_player_name} --session ${auth_session} --version ${version_name} --gameDir ${game_directory} --assetsDir ${game_assets}
 			params.add("net.minecraft.launchwrapper.Launch");
 			params.add("--tweakClass");
@@ -163,6 +194,110 @@ public class MCGameRuner {
 			params.add(ClientFolderPath + "assets");
 			
 		} else if (GlobalVar.fmlVersion.equals("1.7.10")) {
+			/* C:\Java\64\jre7\bin\javaw.exe -XX:HeapDumpPath=MojangTricksIntelDriversForPerformance_javaw.exe_minecraft.exe.heapdump 
+			 * -Xmx1G -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:-UseAdaptiveSizePolicy -Xmn128M  -XX:MaxPermSize=512M 
+			 * -Djava.library.path=C:\Users\kolesnikovak\AppData\Roaming\.minecraft\versions\1.7.10-Forge10.13.1.1222\1.7.10-Forge10.13.1.1222-natives-4726770792780497 
+			 * -cp C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\net\minecraftforge\forge\1.7.10-10.13.1.1222\forge-1.7.10-10.13.1.1222.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\net\minecraft\launchwrapper\1.11\launchwrapper-1.11.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\org\ow2\asm\asm-all\5.0.3\asm-all-5.0.3.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\com\typesafe\akka\akka-actor_2.11\2.3.3\akka-actor_2.11-2.3.3.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\com\typesafe\config\1.2.1\config-1.2.1.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\org\scala-lang\scala-actors-migration_2.11\1.1.0\scala-actors-migration_2.11-1.1.0.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\org\scala-lang\scala-compiler\2.11.1\scala-compiler-2.11.1.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\org\scala-lang\plugins\scala-continuations-library_2.11\1.0.2\scala-continuations-library_2.11-1.0.2.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\org\scala-lang\plugins\scala-continuations-plugin_2.11.1\1.0.2\scala-continuations-plugin_2.11.1-1.0.2.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\org\scala-lang\scala-library\2.11.1\scala-library-2.11.1.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\org\scala-lang\scala-parser-combinators_2.11\1.0.1\scala-parser-combinators_2.11-1.0.1.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\org\scala-lang\scala-reflect\2.11.1\scala-reflect-2.11.1.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\org\scala-lang\scala-swing_2.11\1.0.1\scala-swing_2.11-1.0.1.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\org\scala-lang\scala-xml_2.11\1.0.2\scala-xml_2.11-1.0.2.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\net\sf\jopt-simple\jopt-simple\4.5\jopt-simple-4.5.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\lzma\lzma\0.0.1\lzma-0.0.1.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\com\mojang\realms\1.3.5\realms-1.3.5.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\org\apache\commons\commons-compress\1.8.1\commons-compress-1.8.1.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\org\apache\httpcomponents\httpclient\4.3.3\httpclient-4.3.3.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\commons-logging\commons-logging\1.1.3\commons-logging-1.1.3.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\org\apache\httpcomponents\httpcore\4.3.2\httpcore-4.3.2.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\java3d\vecmath\1.3.1\vecmath-1.3.1.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\net\sf\trove4j\trove4j\3.0.3\trove4j-3.0.3.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\com\ibm\icu\icu4j-core-mojang\51.2\icu4j-core-mojang-51.2.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\com\paulscode\codecjorbis\20101023\codecjorbis-20101023.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\com\paulscode\codecwav\20101023\codecwav-20101023.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\com\paulscode\libraryjavasound\20101123\libraryjavasound-20101123.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\com\paulscode\librarylwjglopenal\20100824\librarylwjglopenal-20100824.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\com\paulscode\soundsystem\20120107\soundsystem-20120107.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\io\netty\netty-all\4.0.10.Final\netty-all-4.0.10.Final.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\com\google\guava\guava\16.0\guava-16.0.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\org\apache\commons\commons-lang3\3.2.1\commons-lang3-3.2.1.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\commons-io\commons-io\2.4\commons-io-2.4.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\commons-codec\commons-codec\1.9\commons-codec-1.9.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\net\java\jinput\jinput\2.0.5\jinput-2.0.5.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\net\java\jutils\jutils\1.0.0\jutils-1.0.0.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\com\google\code\gson\gson\2.2.4\gson-2.2.4.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\com\mojang\authlib\1.5.16\authlib-1.5.16.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\org\apache\logging\log4j\log4j-api\2.0-beta9\log4j-api-2.0-beta9.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\org\apache\logging\log4j\log4j-core\2.0-beta9\log4j-core-2.0-beta9.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\org\lwjgl\lwjgl\lwjgl\2.9.1\lwjgl-2.9.1.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\org\lwjgl\lwjgl\lwjgl_util\2.9.1\lwjgl_util-2.9.1.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\libraries\tv\twitch\twitch\5.16\twitch-5.16.jar;
+			 * C:\Users\kolesnikovak\AppData\Roaming\.minecraft\versions\1.7.10-Forge10.13.1.1222\1.7.10-Forge10.13.1.1222.jar net.minecraft.launchwrapper.Launch 
+			 * --username Tankistodor --version 1.7.10-Forge10.13.1.1222 --gameDir C:\Users\kolesnikovak\AppData\Roaming\.minecraft 
+			 * --assetsDir C:\Users\kolesnikovak\AppData\Roaming\.minecraft\assets --assetIndex 1.7.10 
+			 * --uuid 1877a626d9b04afe939abe17db54b2a6 --accessToken 30d98fb9d99e4b6498de82c7cd66df6d --userProperties {} --userType legacy --tweakClass cpw.mods.fml.common.launcher.FMLTweaker
+			 */
+			
+			params.add("-cp");
+			params.add(
+					ClientFolderPath + "bin" + File.separator + "forge-1.7.10-10.13.1.1222.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "launchwrapper-1.11.jar"+Utils.getJavaDelimiter()+
+					
+					ClientFolderPath + "bin" + File.separator + "1.7.10.jar"+Utils.getJavaDelimiter()+
+					
+					
+					ClientFolderPath + "bin" + File.separator + "akka-actor_2.11-2.3.3.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "asm-all-5.0.3.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "authlib-1.5.16.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "codecjorbis-20101023.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "codecwav-20101023.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "commons-codec-1.9.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "commons-compress-1.8.1.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "commons-io-2.4.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "commons-lang3-3.2.1.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "commons-logging-1.1.3.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "config-1.2.1.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "gson-2.2.4.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "guava-16.0.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "httpclient-4.3.3.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "httpcore-4.3.2.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "icu4j-core-mojang-51.2.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "jinput-2.0.5.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "jinput-platform-2.0.5-natives-windows.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "jopt-simple-4.5.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "jutils-1.0.0.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "libraryjavasound-20101123.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "librarylwjglopenal-20100824.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "log4j-api-2.0-beta9.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "log4j-core-2.0-beta9.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "lwjgl-2.9.1.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "lwjgl-platform-2.9.1-natives-windows.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "lwjgl_util-2.9.1.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "lzma-0.0.1.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "netty-all-4.0.10.Final.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "realms-1.3.5.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "scala-actors-migration_2.11-1.1.0.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "scala-compiler-2.11.1.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "scala-continuations-library_2.11-1.0.2.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "scala-continuations-plugin_2.11.1-1.0.2.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "scala-library-2.11.1.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "scala-parser-combinators_2.11-1.0.1.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "scala-reflect-2.11.1.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "scala-swing_2.11-1.0.1.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "scala-xml_2.11-1.0.2.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "soundsystem-20120107.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "trove4j-3.0.3.jar"+Utils.getJavaDelimiter()+
+					ClientFolderPath + "bin" + File.separator + "vecmath-1.3.1.jar"
+					);
+					
 			//--username ${auth_player_name} --version ${version_name} --gameDir ${game_directory} --assetsDir ${assets_root} --assetIndex ${assets_index_name} --uuid ${auth_uuid} --accessToken ${auth_access_token} --userProperties ${user_properties} --userType ${user_type}",
 			params.add("net.minecraft.launchwrapper.Launch");
 			params.add("--tweakClass");
@@ -178,26 +313,36 @@ public class MCGameRuner {
 			params.add(ClientFolderPath);
 			params.add("--assetsDir");
 			params.add(ClientFolderPath + "assets");
+			params.add("--assetIndex");
+			params.add("1.7.10");
 			
 			params.add("--uuid");
+			if (Online) {
+				params.add(UUID.randomUUID().toString());
+				//params.add(GlobalVar.uuid);
+			} else {
+				params.add("0000");
+			}
+
+			params.add("--accessToken");
+			if (Online) {
+				params.add(GlobalVar.sessionId);
+			} else {
+				params.add("0000");
+			}
+			
+			params.add("--userPropertie");
+			params.add("{}");
+			
+			params.add("--userType");
+			params.add("legacy");
 			
 		} else {
 			params.add("net.minecraft.client.main.Main");
 		}
-		
-		/*params.add("--username");
-		params.add(GlobalVar.userName);
-		if (Online) {
-			params.add("--session");
-			params.add(GlobalVar.sessionId);
-			params.add("--uuid");
-			params.add(GlobalVar.sessionId);
-		}*/
 
 		ProcessBuilder pb = new ProcessBuilder(params);
-		// Map<String, String> env = pb.environment();
-		
-		//pb.environment().clear();
+
 		pb.environment().remove("_JAVA_OPTIONS");
 		pb.environment().remove("JAVA_TOOL_OPTIONS");
 		pb.environment().remove("JAVA_OPTIONS");
